--- a/src/css/_vars.scss
+++ b/src/css/_vars.scss
@@ -21,5 +21,6 @@ $tundora: #484848;
 
 $textColor: $black;
 $textColorSecondary: $codGray;
-$buttonColor: $pastelGree;
-$buttonColorActive: $malibu;
+$buttonBGColor: $pastelGree;
+$accordeonBGActive: $malibu;
+$buttonColor: $waht;
