--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,6 +1,7 @@
 @import "./vars";
 @import "./mixin";
+@import "../../node_modules/bootstrap/scss/bootstrap";
 @import "./normalize";
-@import "./grid";
 @import "./typografy";
 @import "./header";
+@import "./button";
