--- a/src/css/_typografy.scss
+++ b/src/css/_typografy.scss
@@ -11,3 +11,14 @@
   font-weight: 400;
   line-height: 25px;
 }
+
+.container {
+  max-width: 1170px;
+}
+
+.subtitle {
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  text-align: left;
+}
