--- a/src/css/_typografy.scss
+++ b/src/css/_typografy.scss
@@ -16,6 +16,14 @@
   max-width: 1170px;
 }
 
+.title {
+  font-size: 32px;
+  font-weight: 800;
+  line-height: 40px;
+  text-align: center;
+  color: $codGray;
+}
+
 .subtitle {
   font-size: 18px;
   font-style: normal;
