--- a/src/css/_vars.scss
+++ b/src/css/_vars.scss
@@ -27,5 +27,7 @@ $accordeonBGActive: $malibu;
 $buttonColor: $waht;
 
 $serviceDesignBG: $pattensBlue;
+$stagesDevelopmentBG: $waht;
 $accordionColor: $codGray;
 $arrowColor: $black;
+$borderColor: $malibu;
