--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,9 +1,9 @@
 @import "../../node_modules/bootstrap/scss/bootstrap-grid";
 @import "./vars";
-@import "./mixin";
 @import "./normalize";
 @import "./typografy";
 @import "./header";
 @import "./button";
 @import "./title-block";
 @import "./service-design";
+@import "./stages-development";
