--- a/src/includes/_head.html
+++ b/src/includes/_head.html
@@ -1,2 +1,3 @@
 <meta charset="UTF-8">
+<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
 <link rel="stylesheet" href="css/style.css">
