--- a/src/css/_vars.scss
+++ b/src/css/_vars.scss
@@ -27,6 +27,7 @@ $accordeonBGActive: $malibu;
 $buttonColor: $waht;
 
 $serviceDesignBG: $pattensBlue;
+$examplesEtoreBG: $pattensBlue;
 $stagesDevelopmentBG: $waht;
 $accordionColor: $codGray;
 $arrowColor: $black;
