--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -8,3 +8,6 @@
 @import "./service-design";
 @import "./stages-development";
 @import "./examples-store";
+@import "./more-info";
+@import "./discuss-project";
+@import "./footer";
