--- a/src/css/_vars.scss
+++ b/src/css/_vars.scss
@@ -19,12 +19,14 @@ $codGray: #111111;
 $pastelGree: #75e169;
 $tundora: #484848;
 $pattensBlue: #daecff;
+$red: red;
 
 $textColor: $black;
 $textColorSecondary: $codGray;
 $buttonBGColor: $pastelGree;
 $accordeonBGActive: $malibu;
 $buttonColor: $waht;
+$error: $red;
 
 $serviceDesignBG: $pattensBlue;
 $examplesEtoreBG: $pattensBlue;
