--- a/src/css/_footer.scss
+++ b/src/css/_footer.scss
@@ -29,6 +29,7 @@
   &__infarmational-block a {
     text-decoration: none;
     color: $waht;
+    font-size: 20px;
   }
 
   &__phone-blocks::after {
