--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,6 +1,7 @@
-@import "../../node_modules/bootstrap/scss/bootstrap-grid";
+// @import "../../node_modules/bootstrap/scss/bootstrap-grid";
 @import "./vars";
 @import "./normalize";
+@import "./grid.scss";
 @import "./typografy";
 @import "./header";
 @import "./button";
