--- a/src/css/_title-block.scss
+++ b/src/css/_title-block.scss
@@ -5,6 +5,8 @@
   height: calc(100vh - 96px);
   min-height: 550px;
   padding: 40px 20px;
+  background-position: center;
+
   &__wrapp {
   }
 
@@ -12,9 +14,6 @@
     width: 432px;
     font-size: 16px;
     margin-bottom: 58px;
-  }
-
-  &__button {
   }
 }
 
