--- a/src/css/_typografy.scss
+++ b/src/css/_typografy.scss
@@ -49,11 +49,12 @@
   color: $textColor;
   font-weight: 400;
   line-height: 25px;
+  padding-top: 95px;
 }
 
-.container {
-  max-width: 1170px;
-}
+// .container {
+//   max-width: 1170px;
+// }
 
 .title {
   font-size: 32px;
