--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -75,7 +75,7 @@
       display: block;
       margin: 0 auto;
       text-align: center;
-      padding-top: 50px;
+      // padding-top: 50px;
     }
   }
 
@@ -182,6 +182,7 @@
     left: 0;
     width: 100%;
     height: 50%;
+    overflow: auto;
     background-color: $malibu;
     transition: 0.5s ease 0s;
 
