--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -181,10 +181,16 @@
     top: -100%;
     left: 0;
     width: 100%;
-    height: 50%;
+    height: 100%;
+    padding-top: 135px;
     overflow: auto;
     background-color: $malibu;
     transition: 0.5s ease 0s;
+
+    @media screen and (max-width: 554px) {
+      height: 50%;
+      padding-top: 80px;
+    }
 
     &.active {
       top: 0;
