--- a/src/css/_vars.scss
+++ b/src/css/_vars.scss
@@ -30,6 +30,7 @@ $error: $red;
 
 $serviceDesignBG: $pattensBlue;
 $examplesEtoreBG: $pattensBlue;
+$discussProjectBG: $pattensBlue;
 $stagesDevelopmentBG: $waht;
 $accordionColor: $codGray;
 $arrowColor: $black;
