--- a/src/css/_examples-store.scss
+++ b/src/css/_examples-store.scss
@@ -4,7 +4,23 @@
   padding: 120px 20px;
   position: relative;
 
-  & img {
+  &__flip-box-mob {
+    @media screen and (min-width: 481px) {
+      display: none;
+    }
+  }
+
+  &__flip-box {
+    @media screen and (max-width: 480px) {
+      display: none;
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    padding: 40px 20px;
+  }
+
+  & .imge {
     display: block;
     width: 100%;
     height: 100%;
@@ -14,10 +30,22 @@
     position: absolute;
     top: 300px;
     left: 25px;
+
+    @media screen and (max-width: 1625px) {
+      display: none;
+    }
   }
 
   &__title {
     margin-bottom: 100px;
+
+    @media screen and (max-width: 768px) {
+      margin-bottom: 20px;
+    }
+
+    @media screen and (max-width: 480px) {
+      font-size: 26px;
+    }
   }
 
   &__flip-card-wrapper {
@@ -30,6 +58,10 @@
     perspective: 1000px;
     background-color: transparent;
     display: block;
+
+    @media screen and (max-width: 992px) {
+      margin: 0 auto;
+    }
 
     &:hover .examples-store__flip-card-inner {
       transform: rotateY(180deg);
@@ -57,6 +89,7 @@
 
   &__flip-card-front img {
     border-radius: 15px;
+    width: 100%;
   }
 
   &__flip-card-back {
@@ -78,8 +111,99 @@
     bottom: 245px;
     right: 122px;
 
+    @media screen and (max-width: 1625px) {
+      display: none;
+    }
+
     & img {
       width: 108px;
+    }
+  }
+
+  & .slick-arrow.slick-next,
+  .slick-arrow.slick-prev {
+    position: absolute;
+    bottom: -142px;
+    font-size: 0;
+    width: 60px;
+    height: 60px;
+    border: 0;
+    cursor: pointer;
+
+    @media screen and (max-width: 480px) {
+      bottom: -52px;
+    }
+  }
+
+  & .slick-arrow.slick-prev {
+    background: url(../image/nextArrow.svg);
+    left: 52%;
+
+    @media screen and (max-width: 480px) {
+      left: 68%;
+    }
+  }
+
+  & .slick-arrow.slick-next {
+    background: url(../image/prevArrow.svg);
+    left: 39%;
+
+    @media screen and (max-width: 480px) {
+      left: 15%;
+    }
+  }
+
+  & .slick-arrow.slick-next:hover {
+    background: url(../image/nextArrowActive.svg);
+    width: 60px;
+    height: 60px;
+  }
+
+  & .slick-arrow.slick-prev:hover {
+    background: url(../image/prevArrowActive.svg);
+    width: 60px;
+    height: 60px;
+  }
+}
+
+.flip-box-mob {
+  &__item-wrapper {
+    padding: 10px;
+  }
+
+  &__img-wrapper {
+    width: 100%;
+    height: 260px;
+    margin-bottom: 15px;
+
+    @media screen and (max-width: 380px) {
+      width: 280px;
+    }
+  }
+
+  &__card-title {
+    background-color: $malibu;
+    color: $waht;
+    width: 335px;
+    height: 260px;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    margin-bottom: 15px;
+
+    @media screen and (max-width: 420px) {
+      width: 300px;
+    }
+
+    @media screen and (max-width: 380px) {
+      width: 280px;
+    }
+
+    & h5 {
+      font-size: 21px;
+      font-weight: 700;
     }
   }
 }
