--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -8,7 +8,7 @@
   z-index: 10;
 
   @media screen and (max-width: 992px) {
-    padding: 10px 0;
+    padding: 10px;
     & .container {
       padding: 5px;
     }
@@ -181,14 +181,13 @@
     top: -100%;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 50%;
     padding-top: 135px;
     overflow: auto;
     background-color: $malibu;
     transition: 0.5s ease 0s;
 
     @media screen and (max-width: 554px) {
-      height: 50%;
       padding-top: 80px;
     }
 
