--- a/src/css/_stages-development.scss
+++ b/src/css/_stages-development.scss
@@ -1,33 +1,96 @@
 .stages-development {
-  min-height: 550px;
+  // min-height: 550px;
   background-color: $stagesDevelopmentBG;
   padding: 120px 20px;
   position: relative;
 
+  @media screen and (max-width: 992px) {
+    padding: 60px 20px;
+  }
+
+  @media screen and (max-width: 480px) {
+    padding: 20px;
+  }
+
   &__title {
     margin-bottom: 100px;
+    @media screen and (max-width: 992px) {
+      margin-bottom: 50px;
+    }
+
+    @media screen and (max-width: 480px) {
+      font-size: 23px;
+      line-height: 32px;
+      margin-bottom: 30px;
+    }
   }
 
   &__img-wrapper-sphere {
     position: absolute;
     top: 129px;
     left: 187px;
+
+    @media screen and (max-width: 1200px) {
+      left: 90px;
+      top: 150px;
+
+      @media screen and (max-width: 480px) {
+        left: -13px;
+        top: 66px;
+      }
+
+      & .imge {
+        width: 52px;
+
+        @media screen and (max-width: 480px) {
+          width: 38px;
+        }
+      }
+    }
   }
 
   &__img-wrapper-wave {
     position: absolute;
     bottom: 47px;
     right: 186px;
+
+    @media screen and (max-width: 992px) {
+      bottom: 87px;
+      right: 125px;
+    }
+
+    @media screen and (max-width: 480px) {
+      display: none;
+    }
+
+    & .imge {
+      width: 150px;
+    }
   }
 
   &__carousel-wrapper {
-    // max-width: 694px;
     margin: 0 auto;
     margin-bottom: 150px;
+
+    @media screen and (max-width: 480px) {
+      margin-bottom: 57px;
+    }
   }
 
   &__img-carousel__imge {
     width: 250px;
+
+    @media screen and (max-width: 1200px) {
+      width: 180px;
+    }
+
+    @media screen and (max-width: 768px) {
+      width: 140px;
+    }
+
+    @media screen and (max-width: 480px) {
+      width: 220px;
+    }
   }
   &__item-wrapper {
     padding: 0 10px;
@@ -41,12 +104,31 @@
     justify-content: space-around;
     align-items: center;
 
+    @media screen and (max-width: 768px) {
+      height: 300px;
+    }
+
+    @media screen and (max-width: 480px) {
+      height: 615px;
+
+      flex-direction: column;
+    }
+
     &_h3 {
       font-size: 21px;
       font-weight: 700;
       line-height: 26px;
       text-align: left;
       margin-bottom: 29px;
+
+      @media screen and (max-width: 1200px) {
+        font-size: 20px;
+      }
+
+      @media screen and (max-width: 768px) {
+        font-size: 18px;
+        margin-bottom: 15px;
+      }
     }
   }
 
@@ -54,17 +136,35 @@
     width: 300px;
     line-height: 25px;
     text-align: left;
+
+    @media screen and (max-width: 1200px) {
+      font-size: 18px;
+    }
+
+    @media screen and (max-width: 768px) {
+      font-size: 16px;
+      width: 269px;
+      line-height: 21px;
+    }
   }
 }
 
 .slick-arrow.slick-prev {
   background: url(../image/nextArrow.svg);
   left: 52%;
+
+  @media screen and (max-width: 480px) {
+    left: 68%;
+  }
 }
 
 .slick-arrow.slick-next {
   background: url(../image/prevArrow.svg);
-  left: 45%;
+  left: 39%;
+
+  @media screen and (max-width: 480px) {
+    left: 15%;
+  }
 }
 
 .slick-arrow.slick-next:hover {
@@ -88,4 +188,12 @@
   height: 60px;
   border: 0;
   cursor: pointer;
+
+  @media screen and (max-width: 992px) {
+    bottom: -116px;
+  }
+
+  @media screen and (max-width: 480px) {
+    bottom: -86px;
+  }
 }
