--- a/src/css/_title-block.scss
+++ b/src/css/_title-block.scss
@@ -2,18 +2,57 @@
   background-image: url(../image/title-img-min.png);
   background-repeat: no-repeat;
   background-size: 100%;
-  height: calc(100vh - 96px);
+  height: 100vh;
   min-height: 550px;
   padding: 40px 20px;
   background-position: center;
+  background-color: $waht;
+  display: flex;
+  align-items: center;
+
+  @media screen and (max-width: 1200px) {
+    height: 0;
+  }
+
+  @media (max-width: 576px) {
+    background-image: url("");
+    min-height: 732px;
+    padding: 20px;
+    background-position: center;
+    background-color: $waht;
+    align-items: end;
+  }
 
   &__wrapp {
+    z-index: 5;
+  }
+
+  &__overflow {
+    @media (max-width: 576px) {
+      background-image: url(../image/ill.png);
+      background-repeat: no-repeat;
+      background-size: 100%;
+      height: 100%;
+      width: 100%;
+      top: 74px;
+      left: 0;
+      position: absolute;
+    }
   }
 
   &__subtitle {
     width: 432px;
     font-size: 16px;
     margin-bottom: 58px;
+
+    @media screen and (max-width: 992px) {
+      width: 366px;
+      margin-bottom: 40px;
+    }
+    @media screen and (max-width: 768px) {
+      width: 344px;
+      margin-bottom: 25px;
+    }
   }
 }
 
@@ -22,14 +61,34 @@
   font-weight: 900;
   line-height: 63px;
   color: $tundora;
-  width: 600px;
   margin-bottom: 20px;
-  padding-top: 115px;
+
+  @media screen and (max-width: 1200px) {
+    font-size: 40px;
+    line-height: 50px;
+  }
+  @media screen and (max-width: 768px) {
+    font-size: 35px;
+    line-height: 42px;
+  }
+
+  @media screen and (max-width: 576px) {
+    font-size: 27px;
+    line-height: 32px;
+  }
 }
 
 .button__title-block {
   width: 270px;
   height: 60px;
+
+  @media screen and (max-width: 992px) {
+    width: 220px;
+  }
+
+  @media (max-width: 576px) {
+    width: 100%;
+  }
 
   &:hover {
     border: 2px solid $malibu;
