--- a/src/css/_examples-store.scss
+++ b/src/css/_examples-store.scss
@@ -177,7 +177,8 @@
     margin-bottom: 15px;
 
     @media screen and (max-width: 380px) {
-      width: 280px;
+      width: 242px;
+      height: 240px;
     }
   }
 
@@ -191,14 +192,15 @@
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    margin-bottom: 15px;
+    margin: 0 auto 15px;
 
     @media screen and (max-width: 420px) {
       width: 300px;
     }
 
     @media screen and (max-width: 380px) {
-      width: 280px;
+      width: 242px;
+      height: 240px;
     }
 
     & h5 {
