--- a/src/css/_examples-store.scss
+++ b/src/css/_examples-store.scss
@@ -140,7 +140,7 @@
     left: 52%;
 
     @media screen and (max-width: 480px) {
-      left: 68%;
+      left: 63%;
     }
   }
 
@@ -149,7 +149,11 @@
     left: 39%;
 
     @media screen and (max-width: 480px) {
-      left: 15%;
+      left: 20%;
+    }
+
+    @media screen and (max-width: 400px) {
+      left: 17%;
     }
   }
 
@@ -174,7 +178,7 @@
   &__img-wrapper {
     width: 100%;
     height: 260px;
-    margin-bottom: 15px;
+    margin: 0 auto 15px;
 
     @media screen and (max-width: 380px) {
       width: 242px;
