--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -178,21 +178,16 @@
 
   .header__blok-menu {
     position: fixed;
-    top: -100%;
+    transform: translate(0, -193px);
     left: 0;
     width: 100%;
-    height: 50%;
-    padding-top: 135px;
+    padding-top: 90px;
     overflow: auto;
     background-color: $malibu;
     transition: 0.5s ease 0s;
 
-    @media screen and (max-width: 554px) {
-      padding-top: 80px;
-    }
-
     &.active {
-      top: 0;
+      transform: translate(0, 147px);
       transition: 0.5s ease 0s;
     }
   }
