--- a/src/css/_service-design.scss
+++ b/src/css/_service-design.scss
@@ -66,6 +66,14 @@
     margin-bottom: 10px;
   }
 
+  &__item-active .accordion-spoiler__title::before {
+    background-color: $accordeonBGActive;
+  }
+
+  &__item-active .accordion-spoiler__title::after {
+    transform: rotate(135deg);
+  }
+
   &__title {
     color: $accordionColor;
     padding: 15px 20px 15px 96px;
@@ -109,17 +117,16 @@
       transform: rotate(-45deg);
       transition: all 0.3s ease-out;
     }
-    &.active::before {
-      background-color: $accordeonBGActive;
-    }
-    &.active::after {
-      transform: rotate(135deg);
-    }
   }
 
   &__text {
     padding: 15px 69px 54px 96px;
     display: none;
+
+    @media (max-width: 480px) {
+      padding: 15px 31px 47px 50px;
+      font-size: 16px;
+    }
   }
 
   &__text p {
@@ -133,6 +140,10 @@
     background-color: $arrowColor;
     top: 0px;
     left: -44px;
+
+    @media (max-width: 480px) {
+      left: -29px;
+    }
   }
 }
 
